--- a/prices.html
+++ b/prices.html
@@ -4,84 +4,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Цены на проектирование инженерных систем в Москве — Hot-Plan</title>
+    <title>Цены на проектирование инженерных систем 2024 в Москве | Hot-Plan</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
         :root { --brand-orange: #fc670c; --brand-dark: #111827; }
-        body { font-family: 'Inter', sans-serif; color: #374151; }
-        .logo-font { font-family: 'Inter', sans-serif; font-weight: 900; }
+        body { font-family: 'Inter', sans-serif; }
     </style>
 </head>
 <body class="bg-white">
     <header class="bg-[#111827] py-4">
         <div class="container mx-auto px-4 flex justify-between items-center">
-            <a href="index.html" class="logo-font text-2xl text-white">HOT<span class="text-[#fc670c]">PLAN</span></a>
+            <a href="index.html" class="font-black text-2xl text-white">HOT<span class="text-[#fc670c]">PLAN</span></a>
             <nav class="hidden md:flex gap-6 text-[9px] font-black uppercase text-white/70">
                 <a href="services.html">Системы</a>
                 <a href="restorany.html">Рестораны</a>
-                <a href="ofisy.html">Офисы</a>
-                <a href="portfolio.html">Кейсы</a>
                 <a href="prices.html" class="text-white">Цены</a>
+                <a href="contacts.html">Контакты</a>
             </nav>
         </div>
     </header>
 
     <main class="py-24">
         <div class="container mx-auto px-4 max-w-5xl">
-            <h1 class="text-5xl font-black uppercase mb-16 text-center">Прайс-лист <span class="text-[#fc670c]">2024</span></h1>
+            <h1 class="text-5xl font-black uppercase mb-16 text-center">Прайс-лист <span class="text-[#fc670c]">на услуги</span></h1>
             
-            <div class="space-y-12">
-                <!-- Table 1 -->
-                <div class="bg-white rounded-[40px] shadow-2xl overflow-hidden border border-slate-100">
+            <div class="space-y-16">
+                <!-- Systems Table -->
+                <div class="bg-white rounded-[48px] shadow-3xl overflow-hidden border border-slate-100">
+                    <h2 class="bg-[#111827] text-white p-8 text-sm font-black uppercase tracking-widest text-center">Стоимость по разделам (за м²)</h2>
                     <table class="w-full text-left text-xs font-black uppercase tracking-widest">
-                        <thead class="bg-[#111827] text-white">
-                            <tr>
-                                <th class="p-8">Раздел проектирования</th>
-                                <th class="p-8">Офисы / ТЦ</th>
-                                <th class="p-8 text-[#fc670c]">Рестораны</th>
-                            </tr>
-                        </thead>
                         <tbody class="divide-y divide-slate-100">
-                            <tr>
-                                <td class="p-8 text-[#111827]">Вентиляция и ОВ</td>
-                                <td class="p-8">от 130 ₽/м²</td>
-                                <td class="p-8 bg-orange-50/50">от 180 ₽/м²</td>
+                            <tr class="hover:bg-slate-50">
+                                <td class="p-8">Вентиляция и кондиционирование (ОВ)</td>
+                                <td class="p-8 text-right text-[#fc670c]">от 180 ₽</td>
                             </tr>
-                            <tr>
-                                <td class="p-8 text-[#111827]">Водоснабжение ВК</td>
-                                <td class="p-8">от 80 ₽/м²</td>
-                                <td class="p-8 bg-orange-50/50">от 140 ₽/м²</td>
+                            <tr class="hover:bg-slate-50">
+                                <td class="p-8">Отопление и ИТП</td>
+                                <td class="p-8 text-right text-[#fc670c]">от 150 ₽</td>
                             </tr>
-                            <tr>
-                                <td class="p-8 text-[#111827]">Электрика ЭОМ</td>
-                                <td class="p-8">от 120 ₽/м²</td>
-                                <td class="p-8 bg-orange-50/50">от 160 ₽/м²</td>
+                            <tr class="hover:bg-slate-50">
+                                <td class="p-8">Водоснабжение и канализация (ВК)</td>
+                                <td class="p-8 text-right text-[#fc670c]">от 140 ₽</td>
                             </tr>
-                            <tr class="bg-slate-50 font-extrabold">
-                                <td class="p-8 text-[#111827]">Комплексный проект</td>
-                                <td class="p-8 text-[#fc670c]">от 400 ₽/м²</td>
-                                <td class="p-8 text-[#fc670c]">от 550 ₽/м²</td>
+                            <tr class="hover:bg-slate-50">
+                                <td class="p-8">Электроснабжение (ЭОМ)</td>
+                                <td class="p-8 text-right text-[#fc670c]">от 160 ₽</td>
+                            </tr>
+                            <tr class="bg-orange-50 font-extrabold">
+                                <td class="p-8">Комплексный проект (BIM Revit)</td>
+                                <td class="p-8 text-right text-[#fc670c]">от 550 ₽</td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
 
-                <div class="p-10 bg-slate-50 rounded-[40px] border border-slate-100">
-                    <h3 class="font-black uppercase mb-4">От чего зависит стоимость?</h3>
-                    <ul class="text-sm space-y-2 text-slate-500 list-disc pl-5">
-                        <li>Площадь объекта (на объемы от 500 м² действуют скидки).</li>
-                        <li>Наличие технологического задания (ТХ).</li>
-                        <li>Сложность инженерных узлов и коллизий.</li>
-                        <li>Необходимость прохождения экспертизы.</li>
+                <div class="p-12 bg-slate-50 rounded-[48px] border border-slate-200">
+                    <h3 class="font-black uppercase mb-6">Важные условия:</h3>
+                    <ul class="space-y-4 text-sm text-slate-500">
+                        <li class="flex gap-4"><i class="fas fa-check text-[#fc670c]"></i> При площади свыше 1000 м² действуют индивидуальные скидки.</li>
+                        <li class="flex gap-4"><i class="fas fa-check text-[#fc670c]"></i> Аудит существующего проекта — бесплатно при заказе у нас.</li>
+                        <li class="flex gap-4"><i class="fas fa-check text-[#fc670c]"></i> Срок разработки — от 5 рабочих дней.</li>
                     </ul>
                 </div>
-
-                <div id="quiz-root"></div>
             </div>
         </div>
     </main>
+
+    <footer class="bg-[#111827] text-white py-12 text-center">
+        <p class="text-[9px] font-black uppercase tracking-widest text-slate-600">© 2024 HOTPLAN. Прозрачное ценообразование без скрытых доплат.</p>
+    </footer>
     <script type="module" src="./index.tsx"></script>
 </body>
 </html>
