--- a/restorany.html
+++ b/restorany.html
@@ -4,21 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Проектирование инженерных систем ресторанов в Москве — Hot-Plan</title>
+    <title>Проектирование инженерных систем ресторанов под ключ в Москве: цены, СРО | Hot-Plan</title>
+    <meta name="description" content="Профессиональное проектирование ОВ, ВК, ЭОМ для ресторанов. Опыт работы с «Кофеманией» и «Мореманией». 3D проектирование в Revit, гарантия согласования в ТЦ.">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
         :root { --brand-orange: #fc670c; --brand-dark: #111827; }
         body { font-family: 'Inter', sans-serif; }
-        .bg-grid { background-image: radial-gradient(#e5e7eb 1px, transparent 1px); background-size: 40px 40px; }
     </style>
 </head>
 <body class="bg-white">
     <header class="bg-[#111827] py-4">
         <div class="container mx-auto px-4 flex justify-between items-center">
             <a href="index.html" class="font-black text-2xl text-white">HOT<span class="text-[#fc670c]">PLAN</span></a>
-            <nav class="hidden md:flex gap-6 text-[9px] font-black uppercase text-white/70">
+            <nav class="hidden md:flex gap-6 text-[9px] font-black uppercase text-white/70 tracking-widest">
                 <a href="services.html">Системы</a>
                 <a href="restorany.html" class="text-white">Рестораны</a>
                 <a href="ofisy.html">Офисы</a>
@@ -29,54 +29,64 @@
     </header>
 
     <main>
-        <section class="py-24 bg-slate-50 bg-grid">
-            <div class="container mx-auto px-4">
-                <h1 class="text-5xl md:text-7xl font-black uppercase mb-8 leading-none">Инженерия для <br><span class="text-[#fc670c]">ресторанов</span></h1>
-                <p class="text-xl text-slate-500 max-w-2xl">Специализированные решения для HoReCa: кухонные вытяжки, жироуловители, расчет по СанПиН. Опыт работы с Кофеманией и Мореманией.</p>
+        <!-- Hero -->
+        <section class="py-32 bg-slate-50 relative overflow-hidden">
+            <div class="container mx-auto px-4 relative z-10">
+                <h1 class="text-5xl md:text-7xl font-black uppercase mb-8 leading-none">Инженерия для <br><span class="text-[#fc670c]">ресторанов и кафе</span></h1>
+                <p class="text-xl text-slate-500 max-w-3xl font-medium">Специализированное проектирование для HoReCa с учетом требований СанПиН 2.3.6.1079-01. Опыт работы с ведущими сетями Москвы: «Кофемания», «Моремания», «Танжир Лоунж».</p>
             </div>
+            <div class="absolute right-0 top-0 h-full w-1/3 opacity-10 bg-[url('https://images.unsplash.com/photo-1552566626-52f8b828add9?auto=format&fit=crop&q=80&w=800')] bg-cover hidden lg:block"></div>
         </section>
 
+        <!-- Features -->
         <section class="py-32">
             <div class="container mx-auto px-4 grid md:grid-cols-2 gap-20">
-                <div class="space-y-8">
-                    <h2 class="text-3xl font-black uppercase">Особенности проектирования</h2>
-                    <ul class="space-y-6">
-                        <li class="flex gap-4">
-                            <i class="fas fa-check text-[#fc670c] mt-1"></i>
+                <div class="space-y-12">
+                    <h2 class="text-3xl font-black uppercase">Почему рестораторы <br>выбирают нас?</h2>
+                    <div class="space-y-8">
+                        <div class="flex gap-6">
+                            <div class="w-12 h-12 shrink-0 bg-orange-50 rounded-xl flex items-center justify-center text-[#fc670c]"><i class="fas fa-wind text-xl"></i></div>
                             <div>
-                                <h4 class="font-bold">Раздельная вентиляция</h4>
-                                <p class="text-sm text-slate-500">Проектируем независимые системы для горячего цеха и обеденного зала согласно СП 60.13330.</p>
+                                <h4 class="font-bold text-lg mb-2 uppercase">Расчет технологических вытяжек</h4>
+                                <p class="text-sm text-slate-500">Проектируем раздельные системы для горячего цеха и обеденного зала. Исключаем запахи кухни в гостевой зоне.</p>
                             </div>
-                        </li>
-                        <li class="flex gap-4">
-                            <i class="fas fa-check text-[#fc670c] mt-1"></i>
+                        </div>
+                        <div class="flex gap-6">
+                            <div class="w-12 h-12 shrink-0 bg-blue-50 rounded-xl flex items-center justify-center text-blue-600"><i class="fas fa-tint text-xl"></i></div>
                             <div>
-                                <h4 class="font-bold">Жироуловители</h4>
-                                <p class="text-sm text-slate-500">Подбор и расчет систем очистки стоков для согласования с Мосводоканалом.</p>
+                                <h4 class="font-bold text-lg mb-2 uppercase">Системы жироочистки</h4>
+                                <p class="text-sm text-slate-500">Подбор и расчет жироуловителей для согласования с Мосводоканалом и администрациями ТЦ.</p>
                             </div>
-                        </li>
-                        <li class="flex gap-4">
-                            <i class="fas fa-check text-[#fc670c] mt-1"></i>
+                        </div>
+                        <div class="flex gap-6">
+                            <div class="w-12 h-12 shrink-0 bg-yellow-50 rounded-xl flex items-center justify-center text-yellow-600"><i class="fas fa-bolt text-xl"></i></div>
                             <div>
-                                <h4 class="font-bold">Гидрофильтры</h4>
-                                <p class="text-sm text-slate-500">Интеграция систем искрогашения для зон с открытым огнем (хосперы, мангалы).</p>
+                                <h4 class="font-bold text-lg mb-2 uppercase">Выделенная мощность (ЭОМ)</h4>
+                                <p class="text-sm text-slate-500">Точный расчет нагрузок кухонного оборудования (пароконвектоматы, плиты). Снижаем требуемую мощность на 15-20%.</p>
                             </div>
-                        </li>
-                    </ul>
+                        </div>
+                    </div>
                 </div>
-                <div class="bg-slate-100 rounded-[40px] overflow-hidden">
-                    <img src="https://images.unsplash.com/photo-1551218808-94e220e084d2?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover grayscale" alt="Ресторан">
+                <div class="bg-slate-100 rounded-[48px] overflow-hidden border-8 border-slate-50 shadow-2xl">
+                    <img src="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?auto=format&fit=crop&q=80&w=1200" class="w-full h-full object-cover grayscale" alt="Ресторанная инженерия">
                 </div>
             </div>
         </section>
 
+        <!-- Trust Block -->
         <section class="py-20 bg-[#111827] text-white">
-            <div class="container mx-auto px-4 text-center">
-                <h2 class="text-3xl mb-8">Закажите аудит вашего техзадания</h2>
-                <div id="quiz-root"></div>
+            <div class="container mx-auto px-4 text-center opacity-40 grayscale flex flex-wrap justify-center gap-16 text-2xl font-black uppercase italic">
+                <span>Moremania</span>
+                <span>Coffeemania</span>
+                <span>Tangiers Lounge</span>
+                <span>Vkusvill</span>
             </div>
         </section>
     </main>
+
+    <footer class="bg-[#111827] text-white py-12 text-center">
+        <p class="text-[9px] font-black uppercase tracking-widest text-slate-600">© 2024 HOTPLAN. Специализация на HoReCa проектах.</p>
+    </footer>
     <script type="module" src="./index.tsx"></script>
 </body>
 </html>
