--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Проектирование инженерных систем в Москве — HOTPLAN: Цена за м2, Revit 3D</title>
-    <meta name="description" content="Инженерное бюро HOTPLAN: проектирование ОВ, ВК, ЭОМ в Revit. Экономия бюджета до 20%. Допуск СРО. 500+ объектов. ГИП Владислав Митин. Закажите проект по ГОСТ!">
+    <title>Проектирование инженерных систем под ключ в Москве: цены, СРО | Hot-Plan</title>
+    <meta name="description" content="Комплексное проектирование ОВ, ВК, ЭОМ в Revit. Экономия 20% на монтаже. 500+ объектов. ГИП Владислав Митин. Допуск СРО. Закажите проект по ГОСТ!">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -14,16 +14,16 @@
         body { font-family: 'Inter', sans-serif; color: var(--text-main); background-color: #FFFFFF; line-height: 1.6; }
         .logo-font { font-family: 'Inter', sans-serif; font-weight: 900; letter-spacing: -0.05em; }
         .bg-grid { background-image: radial-gradient(#e5e7eb 1px, transparent 1px); background-size: 40px 40px; }
-        .cta-button { background-color: var(--brand-orange); color: #FFFFFF; transition: all 0.3s ease; }
+        .cta-button { background-color: var(--brand-orange); color: #FFFFFF; transition: all 0.3s ease; border-radius: 12px; }
         .cta-button:hover { background-color: #e65c0c; transform: translateY(-2px); box-shadow: 0 10px 20px rgba(252, 103, 12, 0.2); }
         h1, h2, h3 { color: var(--brand-dark); font-weight: 800; text-transform: uppercase; tracking-tighter; }
     </style>
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
@@ -32,62 +32,124 @@
     <header class="sticky top-0 z-50 bg-[#111827] border-b border-white/5 py-4 backdrop-blur-lg">
         <div class="container mx-auto px-4 flex justify-between items-center">
             <a href="index.html" class="logo-font text-3xl"><span class="text-[#fc670c]">HOT</span><span class="text-white">PLAN</span></a>
-            <nav class="hidden md:flex gap-6 text-[9px] font-black uppercase tracking-[0.2em] text-white/70">
+            <nav class="hidden xl:flex gap-6 text-[9px] font-black uppercase tracking-[0.2em] text-white/70">
                 <a href="services.html" class="hover:text-[#fc670c]">Системы</a>
-                <a href="restorany.html" class="hover:text-[#fc670c]">Для Ресторанов</a>
-                <a href="ofisy.html" class="hover:text-[#fc670c]">Для Офисов</a>
+                <a href="restorany.html" class="hover:text-[#fc670c]">Рестораны</a>
+                <a href="ofisy.html" class="hover:text-[#fc670c]">Офисы</a>
+                <a href="kvartiry.html" class="hover:text-[#fc670c]">Квартиры</a>
                 <a href="portfolio.html" class="hover:text-[#fc670c]">Кейсы</a>
                 <a href="prices.html" class="hover:text-[#fc670c]">Цены</a>
-                <a href="sro.html" class="hover:text-[#fc670c]">SRO</a>
+                <a href="sro.html" class="hover:text-[#fc670c]">СРО</a>
             </nav>
             <div class="hidden lg:flex items-center gap-6">
                 <a href="tel:+74950000000" class="text-sm font-black text-white">+7 (495) 000-00-00</a>
-                <a href="#quiz" class="cta-button px-6 py-3 rounded-xl text-[10px] font-black uppercase">Расчет КП</a>
+                <a href="#quiz" class="cta-button px-6 py-3 text-[10px] font-black uppercase">КП за 30 мин</a>
             </div>
         </div>
     </header>
 
     <main>
-        <!-- Hero -->
+        <!-- Hero Section -->
         <section class="bg-[#111827] text-white py-24 md:py-40 relative overflow-hidden">
             <div class="absolute inset-0 opacity-10 bg-grid"></div>
             <div class="container mx-auto px-4 relative z-10 grid lg:grid-cols-2 gap-16 items-center">
                 <div class="space-y-8">
-                    <h1 class="text-5xl md:text-8xl font-black leading-[0.9]">Инженерные системы <span class="text-[#fc670c]">Revit 3D</span></h1>
-                    <p class="text-slate-400 text-xl font-medium max-w-xl">Профессиональное проектирование ОВ, ВК и ЭОМ для бизнеса. Исключаем коллизии на этапе моделирования.</p>
-                    <div class="flex gap-4"><a href="#quiz" class="cta-button px-10 py-5 rounded-2xl font-black uppercase text-xs">Получить смету</a></div>
+                    <div class="inline-flex items-center gap-3 px-4 py-2 bg-white/5 border border-white/10 rounded-full text-[10px] font-black uppercase tracking-widest text-[#fc670c]">
+                        <span class="w-2 h-2 bg-[#fc670c] rounded-full animate-pulse"></span>
+                        BIM Проектирование в Revit
+                    </div>
+                    <h1 class="text-5xl md:text-7xl font-black leading-[0.9]">Комплексное проектирование <span class="text-[#fc670c]">инженерных систем</span> в Москве</h1>
+                    <p class="text-slate-400 text-xl font-medium max-w-xl">Разработка разделов ОВ, ВК, ЭОМ с гарантией отсутствия коллизий. Экономия до 20% бюджета на этапе монтажа.</p>
+                    <div class="flex flex-wrap gap-6">
+                        <a href="#quiz" class="cta-button px-10 py-5 font-black uppercase text-xs">Рассчитать стоимость</a>
+                        <div class="flex items-center gap-4 text-white/50 text-[10px] font-black uppercase tracking-widest">
+                            <i class="fas fa-shield-alt text-[#fc670c] text-xl"></i>
+                            Допуск СРО П.035.77
+                        </div>
+                    </div>
                 </div>
                 <div class="hidden lg:block relative">
-                    <img src="https://images.unsplash.com/photo-1503387762-592dea58ef23?auto=format&fit=crop&q=80&w=800" class="rounded-[80px] border-[20px] border-white/5 opacity-60" alt="BIM">
+                    <div class="aspect-square bg-slate-800 rounded-[80px] border-[20px] border-white/5 overflow-hidden group">
+                        <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?auto=format&fit=crop&q=80&w=1200" class="w-full h-full object-cover opacity-60 group-hover:scale-110 transition-transform duration-[5s]" alt="BIM Проектирование">
+                    </div>
                 </div>
             </div>
         </section>
 
-        <!-- BIM Advantage -->
-        <section class="py-24 bg-white bg-grid">
-            <div class="container mx-auto px-4 grid md:grid-cols-3 gap-12">
-                <div class="p-8 bg-slate-50 rounded-3xl">
-                    <h3 class="text-lg mb-4">0% Коллизий</h3>
-                    <p class="text-sm text-slate-500">BIM-модель позволяет увидеть пересечение труб и кабелей до начала монтажа.</p>
-                </div>
-                <div class="p-8 bg-slate-50 rounded-3xl">
-                    <h3 class="text-lg mb-4">-20% Бюджета</h3>
-                    <p class="text-sm text-slate-500">Точные спецификации из Revit исключают закупку лишних материалов.</p>
-                </div>
-                <div class="p-8 bg-slate-50 rounded-3xl">
-                    <h3 class="text-lg mb-4">100% Согласование</h3>
-                    <p class="text-sm text-slate-500">Проекты по ГОСТ и СНиП проходят любую экспертизу и проверки ТЦ.</p>
+        <!-- Advantages Block -->
+        <section class="py-32 bg-white">
+            <div class="container mx-auto px-4">
+                <div class="grid md:grid-cols-3 gap-12">
+                    <div class="p-10 bg-slate-50 rounded-[40px] border border-slate-100">
+                        <div class="w-16 h-16 bg-white rounded-2xl flex items-center justify-center mb-8 shadow-sm">
+                            <i class="fas fa-cube text-[#fc670c] text-2xl"></i>
+                        </div>
+                        <h3 class="text-xl mb-4 text-[#111827]">Revit 3D Моделирование</h3>
+                        <p class="text-sm text-slate-500">Визуализация всех сетей до начала стройки. Исключаем пересечения труб и кабелей на 100%.</p>
+                    </div>
+                    <div class="p-10 bg-slate-50 rounded-[40px] border border-slate-100">
+                        <div class="w-16 h-16 bg-white rounded-2xl flex items-center justify-center mb-8 shadow-sm">
+                            <i class="fas fa-file-invoice-dollar text-[#fc670c] text-2xl"></i>
+                        </div>
+                        <h3 class="text-xl mb-4 text-[#111827]">Точные спецификации</h3>
+                        <p class="text-sm text-slate-500">Автоматический расчет материалов в Revit исключает закупку лишнего оборудования. Экономия 20% бюджета.</p>
+                    </div>
+                    <div class="p-10 bg-slate-50 rounded-[40px] border border-slate-100">
+                        <div class="w-16 h-16 bg-white rounded-2xl flex items-center justify-center mb-8 shadow-sm">
+                            <i class="fas fa-user-tie text-[#fc670c] text-2xl"></i>
+                        </div>
+                        <h3 class="text-xl mb-4 text-[#111827]">ГИП с опытом 12 лет</h3>
+                        <p class="text-sm text-slate-500">Владислав Митин лично курирует каждый проект. 500+ реализованных объектов в Москве.</p>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <!-- Quiz -->
-        <section id="quiz" class="py-32 bg-[#F9FAFB]">
+        <!-- Pricing Summary -->
+        <section id="prices" class="py-32 bg-[#F9FAFB]">
+            <div class="container mx-auto px-4 max-w-5xl">
+                <h2 class="text-4xl md:text-5xl text-center mb-20 uppercase tracking-tighter">Стоимость проектирования <span class="text-[#fc670c]">за м²</span></h2>
+                <div class="bg-white rounded-[48px] shadow-2xl overflow-hidden border border-slate-100">
+                    <table class="w-full text-left text-xs font-black uppercase tracking-widest">
+                        <thead class="bg-[#111827] text-white">
+                            <tr>
+                                <th class="px-10 py-8">Система</th>
+                                <th class="px-10 py-8">Квартиры / Дома</th>
+                                <th class="px-10 py-8 text-[#fc670c]">Рестораны / Офисы</th>
+                            </tr>
+                        </thead>
+                        <tbody class="divide-y divide-slate-100 text-slate-600">
+                            <tr>
+                                <td class="px-10 py-8 text-[#111827]">Вентиляция и ОВ</td>
+                                <td class="px-10 py-8">от 120 ₽/м²</td>
+                                <td class="px-10 py-8 bg-orange-50/30">от 180 ₽/м²</td>
+                            </tr>
+                            <tr>
+                                <td class="px-10 py-8 text-[#111827]">Водоснабжение ВК</td>
+                                <td class="px-10 py-8">от 100 ₽/м²</td>
+                                <td class="px-10 py-8 bg-orange-50/30">от 140 ₽/м²</td>
+                            </tr>
+                            <tr>
+                                <td class="px-10 py-8 text-[#111827]">Электрика ЭОМ</td>
+                                <td class="px-10 py-8">от 140 ₽/м²</td>
+                                <td class="px-10 py-8 bg-orange-50/30">от 160 ₽/м²</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="text-center mt-12">
+                    <a href="prices.html" class="text-[10px] font-black text-[#fc670c] uppercase border-b-2 border-[#fc670c] pb-1 hover:text-[#111827] hover:border-[#111827] transition-all">Смотреть полный прайс-лист</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Quiz Mount -->
+        <section id="quiz" class="py-32 bg-[#111827]">
             <div class="container mx-auto px-4">
                 <div class="grid lg:grid-cols-2 gap-24 items-center">
-                    <div class="space-y-8">
-                        <h2 class="text-4xl md:text-7xl uppercase">Узнайте цену <br><span class="text-[#fc670c]">онлайн</span></h2>
-                        <p class="text-slate-500 text-xl">Пройдите тест из 3 вопросов и получите КП за 30 минут.</p>
+                    <div class="text-white space-y-8">
+                        <h2 class="text-4xl md:text-7xl">Рассчитайте цену <br><span class="text-[#fc670c]">за 30 минут</span></h2>
+                        <p class="text-slate-400 text-xl font-medium">Ответьте на 3 вопроса и получите детализированное КП на почту.</p>
                     </div>
                     <div id="quiz-root"></div>
                 </div>
@@ -95,10 +157,10 @@
         </section>
     </main>
 
-    <footer class="bg-[#111827] text-white py-20">
+    <footer class="bg-[#111827] text-white pt-24 pb-12 border-t border-white/5">
         <div class="container mx-auto px-4 text-center">
-            <div class="logo-font text-3xl mb-8"><span class="text-[#fc670c]">HOT</span>PLAN</div>
-            <p class="text-[9px] font-black uppercase tracking-widest text-slate-600">© 2024 HOTPLAN. СРО № П.035.77.1234. Москва, Саввинская наб. 15</p>
+            <div class="logo-font text-3xl mb-12"><span class="text-[#fc670c]">HOT</span>PLAN</div>
+            <p class="text-[9px] font-black uppercase tracking-[0.4em] text-slate-600">© 2024 HOTPLAN. СРО № П.035.77.1234. Москва, Саввинская наб. 15</p>
         </div>
     </footer>
     <script type="module" src="./index.tsx"></script>
