Add footer navigation with page links on all pages

--- a/ofisy.html
+++ b/ofisy.html
@@ -70,6 +70,46 @@
             </div>
         </section>
     </main>
+
+    <footer class="bg-[#111827] text-white pt-24 pb-12 border-t border-white/5">
+        <div class="container mx-auto px-4">
+            <div class="grid md:grid-cols-4 gap-12 mb-12">
+                <div>
+                    <div class="logo-font text-3xl mb-6"><span class="text-[#fc670c]">HOT</span>PLAN</div>
+                    <p class="text-xs text-slate-400">Проектирование инженерных систем в Москве</p>
+                </div>
+                <div>
+                    <h4 class="text-sm font-black uppercase mb-4 tracking-widest text-[#fc670c]">Услуги</h4>
+                    <ul class="space-y-2 text-xs text-slate-400">
+                        <li><a href="services.html" class="hover:text-white transition-colors">Системы</a></li>
+                        <li><a href="restorany.html" class="hover:text-white transition-colors">Рестораны</a></li>
+                        <li><a href="ofisy.html" class="hover:text-white transition-colors">Офисы</a></li>
+                        <li><a href="kvartiry.html" class="hover:text-white transition-colors">Квартиры</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="text-sm font-black uppercase mb-4 tracking-widest text-[#fc670c]">Информация</h4>
+                    <ul class="space-y-2 text-xs text-slate-400">
+                        <li><a href="portfolio.html" class="hover:text-white transition-colors">Кейсы</a></li>
+                        <li><a href="prices.html" class="hover:text-white transition-colors">Цены</a></li>
+                        <li><a href="sro.html" class="hover:text-white transition-colors">СРО</a></li>
+                        <li><a href="about.html" class="hover:text-white transition-colors">О бюро</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="text-sm font-black uppercase mb-4 tracking-widest text-[#fc670c]">Контакты</h4>
+                    <ul class="space-y-2 text-xs text-slate-400">
+                        <li><a href="contacts.html" class="hover:text-white transition-colors">Контакты</a></li>
+                        <li><a href="tel:+74950000000" class="hover:text-white transition-colors">+7 (495) 000-00-00</a></li>
+                        <li><a href="mailto:info@hot-plan.ru" class="hover:text-white transition-colors">info@hot-plan.ru</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="border-t border-white/5 pt-8 text-center">
+                <p class="text-[9px] font-black uppercase tracking-[0.4em] text-slate-600">© 2024 HOTPLAN. СРО № П.035.77.1234. Москва, Саввинская наб. 15</p>
+            </div>
+        </div>
+    </footer>
     <script type="module" src="./index.tsx"></script>
 </body>
 </html>
