--- a/contacts.html
+++ b/contacts.html
@@ -31,7 +31,7 @@
                 <a href="sro.html" class="hover:text-[#fc670c]">СРО</a>
             </nav>
             <div class="hidden lg:flex items-center gap-6">
-                <a href="tel:+74950000000" class="text-sm font-black text-white">+7 (495) 000-00-00</a>
+                <a href="tel:+74999386615" class="text-sm font-black text-white">+7 (499) 938-66-15</a>
                 <a href="#quiz" class="cta-button px-6 py-3 text-[10px] font-black uppercase">КП за 30 мин</a>
             </div>
         </div>
@@ -57,20 +57,29 @@
                         </div>
                         <div class="space-y-4">
                             <div class="text-[10px] font-black uppercase tracking-widest text-slate-400">Телефон</div>
-                            <a href="tel:+74950000000" class="text-2xl font-black text-[#111827] hover:text-[#fc670c] transition-colors">
-                                +7 (495) 000-00-00
+                            <a href="tel:+74999386615" class="text-2xl font-black text-[#111827] hover:text-[#fc670c] transition-colors">
+                                +7 (499) 938-66-15
                             </a>
                         </div>
                         <div class="space-y-4">
                             <div class="text-[10px] font-black uppercase tracking-widest text-slate-400">Email</div>
-                            <a href="mailto:info@hot-plan.ru" class="text-2xl font-black text-[#111827] hover:text-[#fc670c] transition-colors">
-                                info@hot-plan.ru
+                            <a href="mailto:mail@hot-plan.ru" class="text-2xl font-black text-[#111827] hover:text-[#fc670c] transition-colors">
+                                mail@hot-plan.ru
                             </a>
                         </div>
                         <div class="space-y-4">
+                            <div class="text-[10px] font-black uppercase tracking-widest text-slate-400">Режим работы</div>
+                            <div class="text-xl font-black text-[#111827] leading-tight">
+                                Пн-Пт 9:00–18:00
+                            </div>
+                        </div>
+                        <div class="space-y-4">
                             <div class="text-[10px] font-black uppercase tracking-widest text-slate-400">WhatsApp / TG</div>
-                            <div class="text-2xl font-black text-[#111827]">
-                                +7 (900) 000-00-00
+                        </div>
+                        <div class="space-y-4">
+                            <div class="text-[10px] font-black uppercase tracking-widest text-slate-400">Режим работы</div>
+                            <div class="text-xl font-black text-[#111827] leading-tight">
+                                Пн-Пт 9:00–18:00
                             </div>
                         </div>
                     </div>
@@ -119,8 +128,8 @@
                     <h4 class="text-sm font-black uppercase mb-4 tracking-widest text-[#fc670c]">Контакты</h4>
                     <ul class="space-y-2 text-xs text-slate-400">
                         <li><a href="contacts.html" class="hover:text-white transition-colors">Контакты</a></li>
-                        <li><a href="tel:+74950000000" class="hover:text-white transition-colors">+7 (495) 000-00-00</a></li>
-                        <li><a href="mailto:info@hot-plan.ru" class="hover:text-white transition-colors">info@hot-plan.ru</a></li>
+                        <li><a href="tel:+74999386615" class="hover:text-white transition-colors">+7 (499) 938-66-15</a></li>
+                        <li><a href="mailto:mail@hot-plan.ru" class="hover:text-white transition-colors">mail@hot-plan.ru</a></li>
                     </ul>
                 </div>
             </div>
